--- a/empleados/src/main/resources/templates/empleadoDatosFinancieros.html
+++ b/empleados/src/main/resources/templates/empleadoDatosFinancieros.html
@@ -24,13 +24,13 @@
 
 <form th:action="@{/empleados/registro-financiero}" th:object="${empleadoRegistroDTO}" method="post" id="formulario" enctype="multipart/form-data">
     <label for="banco">Banco:</label>
-    <input type="text" id="banco" th:field="*{cuentaCorriente.banco}"  />
-    <div th:if="${#fields.hasErrors('cuentaCorriente.banco')}" th:errors="*{cuentaCorriente.banco}" class="error"></div>
+    <input type="text" id="banco" th:field="*{cuentaCorrienteDTO.banco}"  />
+    <div th:if="${#fields.hasErrors('cuentaCorrienteDTO.banco')}" th:errors="*{cuentaCorrienteDTO.banco}" class="error"></div>
     <br><br>
 
     <label for="cuentaCorriente">Cuenta Corriente:</label>
-    <input type="text" id="cuentaCorriente" th:field="*{cuentaCorriente.cuentaCorriente}"  />
-    <div th:if="${#fields.hasErrors('cuentaCorriente.cuentaCorriente')}" th:errors="*{cuentaCorriente.cuentaCorriente}" class="error"></div>
+    <input type="text" id="cuentaCorriente" th:field="*{cuentaCorrienteDTO.cuentaCorriente}"  />
+    <div th:if="${#fields.hasErrors('cuentaCorrienteDTO.cuentaCorriente')}" th:errors="*{cuentaCorrienteDTO.cuentaCorriente}" class="error"></div>
     <br><br>
 
     <label for="archivoAdjunto">Adjuntar documento:</label>
