add: funcionalidad temporal de (des)bloqueo de usuarios
Relacionado con (#34) → En progreso, puedo leer los usuarios, pero no
puedo actualizar sus datos por un problema del UPDATE de SQL que
necesita la contraseña

--- a/administracion/src/main/resources/templates/areaPersonal.html
+++ b/administracion/src/main/resources/templates/areaPersonal.html
@@ -24,7 +24,9 @@
 
 <div>
     <h2>Accesos a funcionalidades</h2>
-    <a th:href="@{/administrador/}"></a>
+    <button>
+        <a th:href="@{/administrador/desbloqueo-usuarios}">Desbloqueo / bloqueo de usuarios</a>
+    </button>
 </div>
 
 <div>
